<resources>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <string name="entries">Posts</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="synchronization_progress">Synchronization in progress\n(can take some minutes)</string>
    <string name="no_connection">No connectivity available</string>
    <plurals name="status">
        <item quantity="zero">none available</item>
        <item quantity="other">%1$s available</item>
    </plurals>
    <string name="menu_favorite">Favorited</string>
    <string name="menu_share">Share</string>
    <string name="share_title">Share article</string>
    <string name="share_subject">Check out this article</string>
    <string name="share_text">Check out this interesting article at %1$s</string>
    <string name="share_action">Share using</string>
    <string name="starred">Starred</string>
    <string name="unstarred">Unstarred</string>
    <string name="email_support_subject">About %1$s app</string>
    <string name="crash_dialog_text">The application crashed. Help us fix it by sending the app\'s debug log, all you have to do is press OK.</string>
    <string name="crash_dialog_comment">Comment (optional)</string>
    <string name="crash_dialog_email">Email (optional)</string>
	<string name="crash_dialog_toast">Thank you!</string>
	<string name="version">Version</string>
	<string name="web">Web</string>
	<string name="support">Support</string>
	<string name="development">Development</string>
	<string name="badge_thanks">Thanks a lot for your support!</string>
	<string name="licenses">Licenses</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="donation_thankyou">Thank you!</string>
	<string name="donation_reason">If you like using this app, please consider making a donation to the author. With your support, I\'ll be able to bring improvements and new features.</string>
	<string name="donation_help_with">Help me with:</string>
	<string name="donation_requester">You\'ve been using this app for 2 weeks. Please consider making a donation to help support its continuous development.\nNote: this requester will not show again, whichever your decision.</string>
	<string name="donation_requester_positive">Let\'s go!</string>
	<string name="donation_requester_negative">No</string>
	<string name="sku_coffee_ask">a coffee</string>
	<string name="sku_dinner_ask">some dinner</string>
	<string name="sku_rent_ask">my rent</string>
	<string name="donation_badge_about">Additionally, you\'ll get a small badge in the about screen as a thank you.</string>
	<string name="donate">Donate</string>
	<string name="help">Help</string>
	<string name="sync">Sync</string>
	<string name="alert_slow_network">Slow network detected. Review the settings to make sure the bandwidth usage is optimal.</string>
	<string name="alert_slow_network_review">Review</string>
	<string name="alert_slow_network_not_now">Not now</string>
	<string name="ok">OK</string>
	<string name="modified">%1$s (modified: %2$s)</string>
	<string name="no_articles">No articles</string>
	<string name="no_new_articles">No new articles</string>
	<string name="no_starred_articles">No starred articles. Add them using the star button on the article details page</string>
	<string-array name="navigation">
        <item>All</item>
        <item>Recent</item>
        <item>Starred</item>
    </string-array>
	<string name="no_application_found">No application found to handle this link</string>
</resources>
