<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<include
			android:id="@+id/toolbar"
			layout="@layout/toolbar"/>
		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:orientation="vertical">
				<FrameLayout
					android:id="@+id/thankyouGroup"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:visibility="gone">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:text="@string/donation_thankyou"
						android:textSize="32sp"/>
				</FrameLayout>
				<LinearLayout
					android:id="@+id/donationGroup"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					<TextView
						android:id="@+id/intro"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/donation_reason"/>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="24dp"
						android:text="@string/donation_help_with"/>
					<RadioGroup
						android:id="@+id/paymentGroup"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="8dp">
						<RadioButton
							android:id="@+id/coffeeRadio"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="8dp"
							android:text="@string/sku_coffee_ask"/>
						<RadioButton
							android:id="@+id/dinnerRadio"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="8dp"
							android:text="@string/sku_dinner_ask"/>
						<RadioButton
							android:id="@+id/rentRadio"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="8dp"
							android:text="@string/sku_rent_ask"/>
					</RadioGroup>
					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:text="@string/donation_badge_about"
						android:textSize="12sp"/>
					<View
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:layout_weight="1"/>
					<TextView
						android:id="@+id/errorText"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:gravity="center"
						android:textColor="#ff0000"
						android:visibility="gone"/>
					<Button
						android:id="@+id/payButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:enabled="false"
						android:text="@string/donate"
						tools:enabled="true"/>
				</LinearLayout>
			</LinearLayout>
		</ScrollView>
	</LinearLayout>
</layout>