<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
	<include layout="@layout/toolbar"/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginTop="8dp">
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:paddingBottom="8dp"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:paddingTop="8dp"
					app:srcCompat="@drawable/about_logo"/>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginTop="4dp">
				<ImageView
					android:id="@+id/badge_image"
					android:visibility="gone"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="top|right"
					android:paddingBottom="8dp"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:paddingTop="8dp"/>
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingBottom="8dp"
					android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
					android:paddingRight="?android:attr/listPreferredItemPaddingRight"
					android:paddingTop="4dp">
					<TextView
						style="@style/AboutTitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:text="@string/version"/>
					<TextView
						android:id="@+id/version"
						style="@style/AboutDescription"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textIsSelectable="true"
						tools:text="1.0"/>
					<TextView
						style="@style/AboutTitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:text="@string/web"/>
					<TextView
						android:id="@+id/web"
						style="@style/AboutDescription"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textIsSelectable="false"
						tools:text="@string/web_url"/>
					<TextView
						style="@style/AboutTitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:text="@string/support"/>
					<TextView
						android:id="@+id/support"
						style="@style/AboutDescription"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textIsSelectable="false"
						tools:text="@string/support_email"/>
					<TextView
						android:id="@+id/development_title"
						style="@style/AboutTitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:text="@string/development"
						android:visibility="gone"
						tools:visibility="visible"/>
					<TextView
						android:id="@+id/development"
						style="@style/AboutDescription"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textIsSelectable="false"
						android:visibility="gone"
						tools:text="Zapek Software Engineering"
						tools:visibility="visible"/>
					<TextView
						android:id="@+id/badge_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="8dp"
						android:visibility="gone"
						android:text="@string/badge_thanks"/>
				</LinearLayout>
			</android.support.v7.widget.CardView>
			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginTop="4dp">
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingBottom="8dp"
					android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
					android:paddingRight="?android:attr/listPreferredItemPaddingRight"
					android:paddingTop="4dp">
					<TextView
						style="@style/AboutTitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="4dp"
						android:text="@string/licenses"/>
					<TextView
						android:id="@+id/license"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:textIsSelectable="true"
						android:textSize="12sp"
						android:typeface="monospace"
						tools:text="(c) 2017 by Zapek Software Engineering, All Rights Reserved. All your base are belong to us. Move Zig!"/>
				</LinearLayout>
			</android.support.v7.widget.CardView>
		</LinearLayout>
	</ScrollView>
</LinearLayout>